--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
       <div class="header-top">
         <div class="container">
           <div class="top-links">
-            <a href="#">로그인</a>
+            <a href="login.html">로그인</a>
             <a href="#">회원가입</a>
             <a href="#">마이페이지</a>
             <a href="#">장바구니</a>
